[package]
name = "datafusion-distinct-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
datafusion = { git = "https://github.com/apache/datafusion", branch = "main"}
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "tracing"] }

